--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ body
 #container
 {
     width: 70%;
-    padding: 1em;
+    padding: 1cm;
     text-align: left;
     border: 1px solid black;
     margin: 0 auto;
@@ -18,4 +18,19 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+    color: white;    
+    font-weight: bold;    
+    margin: 0;
+    padding: 0.5cm;
+}
+#cabecera #tagline
+{
+    padding: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 1cm;
 }
