Se agrega footer y se cambia el color de la letra

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,3 +34,11 @@ body
     font-weight: normal;
     font-size: 1cm;
 }
+#Footer
+{
+    background-color: rgb(212, 201, 201);
+    color: rgb(211, 41, 18);
+    font-weight: bold;
+    padding: 0.5cm;
+    text-align: center;
+}
